feat: add app icon and add description to use CoreMotion

--- a/Nemurasen/Info.plist
+++ b/Nemurasen/Info.plist
@@ -51,6 +51,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMotionUsageDescription</key>
+	<string>To use the accelerometer of your AirPodsPro.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
